# physica

./: .gitignore  .tags  .tags_sorted_by_file  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  animation.h  animations.h  background.cpp  background.h  bogger.cpp  bogger.h  build.bat  build.sh  build_animations.js  camera.h  cmake_install.cmake  constants.h  debug.cpp  debug.h  enemies.cpp  enemies.h  game.cpp  game.h  game_debug.cpp  game_debug.h  game_intrinsics.h  game_render.cpp  game_render.h  game_tools.cpp  game_tools.h  hashmap.cpp  hashmap.h  intrinsics.h  linux_platform.cpp  linux_platform.h  linuxsdl_platform.cpp  linuxsdl_platform.h  main.cpp  (+31 more)
animations/: lilguy_mayor_running_left.h  lilguy_mayor_running_right.h  lilguy_mayor_standing_left.h  lilguy_mayor_standing_right.h  lilguy_running_left.h  lilguy_running_right.h  lilguy_standing_left.h  lilguy_standing_right.h  martin_jumping_left.h  martin_jumping_right.h  martin_running_left.h  martin_running_right.h  martin_standing_left.h  martin_standing_right.h  martin_tie_adjust.h  may_jumping_left.h  may_jumping_right.h  may_running_left.h  may_running_right.h  may_standing_left.h  may_standing_right.h  may_walking_left.h  may_walking_right.h
shaders/: color_picker_fragment_shader.glsl  gradient_fragment_shader.glsl  passthrough_vertex_shader.glsl  rect_fragment_shader.glsl  rect_vertex_shader.glsl  simple_fragment_shader.glsl  simple_particle_fragment_shader.glsl  simple_particle_vertex_shader.glsl  simple_vertex_shader.glsl  texture_fragment_shader.glsl  texture_vertex_shader.glsl
